kubernetes/templates/istio/http-route.yaml
---
# yaml-language-server: $schema=https://crds.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APP}
spec:
  parentRefs:
    - name: istio-ingressgateway
      namespace: istio-ingress
  hostnames:
    - ${FRONTEND_NAME:-${APP}}.milton.mcf.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ${APP}
          port: ${BACKEND_PORT}
